[gd_scene load_steps=2 format=2]

[ext_resource path="res://dzej/scripts/engine/joingame.gd" type="Script" id=1]

[node name="multiplayerJoin" type="MarginContainer"]
anchor_left = 0.229
anchor_top = 0.163
anchor_right = 0.809
anchor_bottom = 0.548
margin_left = -84.496
margin_top = 3.2
margin_right = -84.416
margin_bottom = -127.8

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
margin_right = 594.0
margin_bottom = 115.0
rect_min_size = Vector2( 200, 115 )
window_title = "Join Game"
resizable = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 115 )

[node name="Label" type="Label" parent="WindowDialog/VBoxContainer"]
margin_right = 594.0
margin_bottom = 21.0
text = "Enter the Server IP:"

[node name="ipInput" type="LineEdit" parent="WindowDialog/VBoxContainer"]
margin_top = 25.0
margin_right = 594.0
margin_bottom = 48.0
placeholder_text = "IP address"

[node name="nameInput" type="LineEdit" parent="WindowDialog/VBoxContainer"]
margin_top = 52.0
margin_right = 594.0
margin_bottom = 75.0
text = "MingeBag"
placeholder_text = "Username"

[node name="joinButton" type="Button" parent="WindowDialog/VBoxContainer"]
margin_top = 79.0
margin_right = 594.0
margin_bottom = 112.0
size_flags_horizontal = 3
text = "Join Server"

[connection signal="pressed" from="WindowDialog/VBoxContainer/joinButton" to="WindowDialog" method="_on_joinButton_pressed"]
